# FFmpegLearn

./: CMakeLists.txt  README.md  example.cpp  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  base_func.cpp  base_func.h  extract_av_frame.cpp  extract_av_frame.h  native-lib.cpp  simple_player.cpp  simple_player.h  utils.h  yuv_to_h264.h  yuv_to_jpeg.cpp
app/src/main/cpp/base/: log.cpp  log.h
app/src/main/cpp/func/: base_func.h  demuxing_decoding.cpp  extract_av_frame.cpp  filtering_video.cpp  filtering_video.h  frame_utils.cpp  frame_utils.h  hw_decode.h  video_to_jpeg.cpp  video_to_jpeg.h  yuv_player.cpp  yuv_player.h  yuv_to_h264.cpp  yuv_to_jpeg.h  yuv_to_video.cpp  yuv_to_video.h
app/src/main/res/layout/: activity_main.xml  activity_yuv_player.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
cppcommon/: CLog.c  CLog.h  CodecUtil.c  CodecUtil.h  Common.h
cppsrc/: Test.cpp  Test.h  demuxing_decoding.cpp  encode_video.cpp  hw_decode.cpp  hw_decode.h  jpeg_to_video.cpp  muxer.cpp  video_to_jpeg.cpp  video_to_jpeg.h  yuv_converter.cpp  yuv_converter.h
cppsrc/include/: demuxing_decoding.h  encode_video.h  hw_decode.h  jpeg_to_video.h  muxer.h  yuv_converter.h
demo-android/: README.md
demo-android/app/: build.gradle
demo-android/app/src/main/: AndroidManifest.xml
demo-android/app/src/main/cpp/: native-lib.cpp
demo-android/gradle/wrapper/: gradle-wrapper.properties
resources/: test_h264.h264
(+27 files in other folders)
